[gd_scene load_steps=4 format=3 uid="uid://c1leqgnp5o7sh"]

[ext_resource type="Script" path="res://openFile.gd" id="1_nww2s"]

[sub_resource type="Theme" id="Theme_6w4j0"]

[sub_resource type="Theme" id="Theme_q3f88"]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -2.0
offset_right = 649.0
offset_bottom = 645.0
color = Color(0.149205, 0.168383, 0.187543, 1)

[node name="Button" type="Button" parent="."]
offset_left = 484.0
offset_top = 12.0
offset_right = 629.0
offset_bottom = 89.0
theme = SubResource("Theme_6w4j0")
theme_override_font_sizes/font_size = 50
text = "OPEN"
script = ExtResource("1_nww2s")

[node name="fileOpen" type="FileDialog" parent="Button"]
title = "Open a Directory"
initial_position = 1
size = Vector2i(392, 300)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Button"]

[node name="skip" type="Button" parent="Button"]
layout_mode = 0
offset_left = -2.0
offset_top = 517.0
offset_right = 142.0
offset_bottom = 613.0
theme = SubResource("Theme_q3f88")
theme_override_font_sizes/font_size = 50
text = ">"

[node name="pause" type="Button" parent="Button"]
layout_mode = 0
offset_left = -230.0
offset_top = 477.0
offset_right = -86.0
offset_bottom = 597.0
theme = SubResource("Theme_q3f88")
theme_override_font_sizes/font_size = 75
text = "⏸︎"

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="back" type="Button" parent="Button"]
layout_mode = 0
offset_left = -457.0
offset_top = 516.0
offset_right = -313.0
offset_bottom = 612.0
theme = SubResource("Theme_q3f88")
theme_override_font_sizes/font_size = 50
text = "<"

[node name="playing" type="Label" parent="Button"]
offset_left = -458.0
offset_top = 221.0
offset_right = 137.0
offset_bottom = 383.0
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="dir_selected" from="Button/fileOpen" to="Button" method="_on_file_open_dir_selected"]
[connection signal="file_selected" from="Button/fileOpen" to="Button" method="_on_file_open_file_selected"]
[connection signal="button_up" from="Button/skip" to="Button" method="_on_skip_button_up"]
[connection signal="button_up" from="Button/pause" to="Button" method="_on_pause_button_up"]
[connection signal="button_up" from="Button/back" to="Button" method="_on_back_button_up"]
